Create user profile page.

--- a/armonitor-web/src/main/webapp/partials/activity.html
+++ b/armonitor-web/src/main/webapp/partials/activity.html
@@ -74,7 +74,7 @@
 			<div style="float: right">{{bcSize}} / {{activity.buildChanges.length}}</div>
 		</div>
 	</div>
-
+	<div style="padding-top: 20px"></div>
 	<div class="panel panel-default">
 		<div class="panel-heading">{{activity.build.mavenVersion}}
 			<div style="float: right">{{cSize}} / {{activity.changes.length}}</div>	
