--- a/armonitor-web/src/main/webapp/partials/include/buildinfo.html
+++ b/armonitor-web/src/main/webapp/partials/include/buildinfo.html
@@ -4,7 +4,7 @@
 			<a href="#/activity/{{build.guid}}" class="link-simple"><span class="label label-success"><i class="icon-fork"></i>Activity</span></a></h3>
 	</div>
 	<div class="row" >
-		<div class="col-lg-6">
+		<div class="col-lg-6" style="padding-bottom: 20px;">
 			<div class="panel panel-success" >
 				<div class="panel-heading">Maven</div>
 				<div class="panel-body">
@@ -25,8 +25,8 @@
 				</div>
 			</div>
 		</div>	
-		<div class="col-lg-6">
-			<div class="panel panel-success">
+		<div class="col-lg-6" style="padding-bottom: 20px;">
+			<div class="panel panel-success" >
 				<div class="panel-heading">Build</div>
 				<div class="panel-body">
 
