--- a/armonitor-web/src/main/webapp/css/fontello.css
+++ b/armonitor-web/src/main/webapp/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?82537429');
-  src: url('../font/fontello.eot?82537429#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?82537429') format('woff'),
-       url('../font/fontello.ttf?82537429') format('truetype'),
-       url('../font/fontello.svg?82537429#fontello') format('svg');
+  src: url('../font/fontello.eot?21211290');
+  src: url('../font/fontello.eot?21211290#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?21211290') format('woff'),
+       url('../font/fontello.ttf?21211290') format('truetype'),
+       url('../font/fontello.svg?21211290#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?82537429#fontello') format('svg');
+    src: url('../font/fontello.svg?21211290#fontello') format('svg');
   }
 }
 */
@@ -51,7 +51,8 @@
 }
  
 .icon-mail-alt:before { content: '\e811'; } /* '' */
-.icon-gauge:before { content: '\e805'; } /* '' */
+.icon-erase:before { content: '\e816'; } /* '' */
+.icon-users:before { content: '\e818'; } /* '' */
 .icon-ok:before { content: '\e801'; } /* '' */
 .icon-link-ext:before { content: '\e804'; } /* '' */
 .icon-link-ext-alt:before { content: '\e806'; } /* '' */
@@ -60,13 +61,24 @@
 .icon-pencil:before { content: '\e812'; } /* '' */
 .icon-attention:before { content: '\e802'; } /* '' */
 .icon-cog-alt:before { content: '\e810'; } /* '' */
-.icon-user:before { content: '\e807'; } /* '' */
+.icon-login:before { content: '\e80e'; } /* '' */
 .icon-logout:before { content: '\e80f'; } /* '' */
 .icon-clock:before { content: '\e803'; } /* '' */
 .icon-right-circled:before { content: '\e800'; } /* '' */
 .icon-arrows-cw:before { content: '\e808'; } /* '' */
+.icon-user:before { content: '\e807'; } /* '' */
+.icon-stop:before { content: '\e81e'; } /* '' */
+.icon-award:before { content: '\e81c'; } /* '' */
+.icon-laptop:before { content: '\e81d'; } /* '' */
+.icon-suitcase:before { content: '\e81b'; } /* '' */
+.icon-check:before { content: '\e814'; } /* '' */
+.icon-check-empty:before { content: '\e815'; } /* '' */
 .icon-floppy:before { content: '\e813'; } /* '' */
+.icon-key:before { content: '\e81a'; } /* '' */
 .icon-fork:before { content: '\e809'; } /* '' */
 .icon-rocket:before { content: '\e80a'; } /* '' */
+.icon-bug:before { content: '\e817'; } /* '' */
 .icon-beaker:before { content: '\e80b'; } /* '' */
-.icon-login:before { content: '\e80e'; } /* '' */
+.icon-gauge:before { content: '\e805'; } /* '' */
+.icon-user-md:before { content: '\e819'; } /* '' */
+.icon-play:before { content: '\e81f'; } /* '' */
