--- a/armonitor-web/src/main/webapp/css/fontello.css
+++ b/armonitor-web/src/main/webapp/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?21211290');
-  src: url('../font/fontello.eot?21211290#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?21211290') format('woff'),
-       url('../font/fontello.ttf?21211290') format('truetype'),
-       url('../font/fontello.svg?21211290#fontello') format('svg');
+  src: url('../font/fontello.eot?92747703');
+  src: url('../font/fontello.eot?92747703#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?92747703') format('woff'),
+       url('../font/fontello.ttf?92747703') format('truetype'),
+       url('../font/fontello.svg?92747703#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?21211290#fontello') format('svg');
+    src: url('../font/fontello.svg?92747703#fontello') format('svg');
   }
 }
 */
@@ -59,14 +59,18 @@
 .icon-lock:before { content: '\e80d'; } /* '' */
 .icon-download-cloud:before { content: '\e80c'; } /* '' */
 .icon-pencil:before { content: '\e812'; } /* '' */
+.icon-bell:before { content: '\e820'; } /* '' */
+.icon-bell-alt:before { content: '\e823'; } /* '' */
 .icon-attention:before { content: '\e802'; } /* '' */
+.icon-trash:before { content: '\e821'; } /* '' */
+.icon-doc-text:before { content: '\e822'; } /* '' */
 .icon-cog-alt:before { content: '\e810'; } /* '' */
 .icon-login:before { content: '\e80e'; } /* '' */
 .icon-logout:before { content: '\e80f'; } /* '' */
 .icon-clock:before { content: '\e803'; } /* '' */
-.icon-right-circled:before { content: '\e800'; } /* '' */
-.icon-arrows-cw:before { content: '\e808'; } /* '' */
 .icon-user:before { content: '\e807'; } /* '' */
+.icon-arrows-cw:before { content: '\e808'; } /* '' */
+.icon-play:before { content: '\e81f'; } /* '' */
 .icon-stop:before { content: '\e81e'; } /* '' */
 .icon-award:before { content: '\e81c'; } /* '' */
 .icon-laptop:before { content: '\e81d'; } /* '' */
@@ -81,4 +85,4 @@
 .icon-beaker:before { content: '\e80b'; } /* '' */
 .icon-gauge:before { content: '\e805'; } /* '' */
 .icon-user-md:before { content: '\e819'; } /* '' */
-.icon-play:before { content: '\e81f'; } /* '' */
+.icon-right-circled:before { content: '\e800'; } /* '' */
