--- a/armonitor-web/src/main/webapp/partials/admin/scm/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/scm/edit.html
@@ -1,3 +1,25 @@
+<h2>Source code systems
+	<small>configuration</small>
+</h2>
+
+<ol class="breadcrumb">
+	<li>
+		<i class="icon-cog-alt"></i> 
+		<a href="#/settings">
+			Settings
+		</a>
+	</li>
+	<li>
+		<i class="icon-fork"></i>
+		<a href="#/settings/scm">
+			SCM systems
+		</a>		
+	</li>	
+	<li class="active">
+		<i class="icon-fork"></i><span data-ng-hide="data.n"> {{data.server}}</span><span data-ng-show="data.n"> - - - - - - - - - -</span>
+	</li>		
+</ol>
+
 <div class="row">
 	<div class="col-lg-12">
 
@@ -9,21 +31,19 @@
 
 				<form class="form-horizontal" data-ng-submit="save()">
 					<fieldset>
-
 						<div class="control-group">
-							<label class="control-label" for="enabled"></label>
+							<label class="control-label" for="auth"></label>
 							<div class="controls">
 								<label class="enabled">
-									<input type="checkbox" id="enabled" data-ng-model="selected.enabled"> Enabled
+									<input type="checkbox" id="auth" data-ng-model="data.auth"> Authentication
 								</label>							
 							</div>
 						</div>
-
 						<div class="control-group">
 							<label class="control-label" for="server">Server URL</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="server" type="text" class="form-control" placeholder="Server URL" data-ng-model="selected.server" required>
+								<input id="server" type="text" class="form-control" placeholder="Server URL" data-ng-model="data.server" required>
 							</div>
 						</div>
 
@@ -31,7 +51,7 @@
 							<label class="control-label" for="user">User</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="user" type="text" class="form-control" placeholder="User" data-ng-model="selected.user" >
+								<input id="user" type="text" class="form-control" placeholder="User" data-ng-model="data.user" >
 							</div>
 						</div>				
 
@@ -39,7 +59,8 @@
 							<label class="control-label" for="type">Type</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="type" type="text" class="form-control" placeholder="Type" data-ng-model="selected.type" >
+								<select id="type" class="form-control" data-ng-model="data.type" data-ng-options="k as v for (k,v) in types">									
+								</select>
 							</div>
 						</div>
 
@@ -47,7 +68,7 @@
 							<label class="control-label" for="readTimeout">Read timeout</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="readTimeout" type="text" class="form-control" placeholder="Read timeout" data-ng-model="selected.readTimeout" >
+								<input id="readTimeout" type="text" class="form-control" placeholder="Read timeout" data-ng-model="data.readTimeout" >
 							</div>
 						</div>
 
@@ -55,31 +76,25 @@
 							<label class="control-label" for="connectionTimeout">Connection timeout</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="connectionTimeout" type="text" class="form-control" placeholder="Connection timeout" data-ng-model="selected.connectionTimeout" >
+								<input id="connectionTimeout" type="text" class="form-control" placeholder="Connection timeout" data-ng-model="data.connectionTimeout" >
 							</div>
 						</div>
 
 						<div class="control-group">
-							<label class="control-label" for="apps">This applications are using this system</label>
-							<div class="input-group">
-								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<select id="apps" multiple class="form-control" >
-									<option data-ng-repeat="a in apps">{{a.name}}</option>
-								</select>
-							</div>
-						</div>
-						
-						<div class="control-group">
 							<label class="control-label" for="save"></label>
 							<div class="controls">
-								<button id="save" type="submit" class="btn btn-success" ><i class="icon-floppy"></i> Save</button>
+								<button id="save" type="submit" class="btn btn-success" data-ng-hide="data.n" ><i class="icon-floppy"></i> Save</button>
+								<button id="save" type="submit" class="btn btn-success" data-ng-show="data.n" ><i class="icon-doc-text"></i> Create</button>
 								<button id="close" type="button" class="btn btn-default" data-ng-click="close()" ><i class="icon-floppy"></i> Close</button>
+								<span style="float: right">
+									<button type="button" class="btn btn-danger" data-ng-disabled="data.n" data-ng-click="delete()"><i class="icon-trash"></i> Delete</button>
+								</span>								
 							</div>
 						</div>					
 					</fieldset>
 				</form>	
 			</tab>
-			<tab data-ng-show="!selected.new">
+			<tab data-ng-show="!data.n">
 				<tab-heading>
 					<i class="icon-lock"></i> Password
 				</tab-heading>
@@ -110,12 +125,12 @@
 							</div>
 						</div>
 
-						
+
 						<div class="control-group">
 							<label class="control-label" for="cp"></label>
 							<div class="controls">
 								<button id="cp" class="btn btn-success" type="submit" ><i class="icon-floppy"></i>  Change password</button>
-								<span class="label label-danger" data-ng-show="error.validation"><i class="icon-attention"></i> The password are not same.</span>
+								<span class="label label-danger" data-ng-show="error.validation"><i class="icon-attention"></i> The password are not same.</span>								
 							</div>												
 						</div>
 					</fieldset>
