--- a/armonitor-web/src/main/webapp/partials/admin/scm/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/scm/edit.html
@@ -40,6 +40,13 @@
 							</div>
 						</div>
 						<div class="control-group">
+							<label class="control-label" for="name">Name</label>
+							<div class="input-group">
+								<span class="input-group-addon"><i class="icon-pencil"></i></span>
+								<input id="name" type="text" class="form-control" placeholder="Name" data-ng-model="data.name" required>
+							</div>
+						</div>						
+						<div class="control-group">
 							<label class="control-label" for="server">Server URL</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
