--- a/armonitor-web/src/main/webapp/partials/admin/scm/search.html
+++ b/armonitor-web/src/main/webapp/partials/admin/scm/search.html
@@ -30,11 +30,10 @@
 			<tr>
 				<th> </th>					
 				<th>Authentication</th>
+				<th>Name</th>
 				<th>User</th>
 				<th>Server</th>
 				<th>Type</th>
-				<th>Read timeout</th>
-				<th>Connection timeout</th>
 			</tr>
 		</thead>			
 		<tbody>
@@ -43,11 +42,10 @@
 					<a href="#/settings/scm/edit/{{item.guid}}"><span class="icon-pencil"></span></a>
 				</td>					
 				<td><i data-ng-class="{'icon-check': item.auth, 'icon-check-empty': !item.auth}"></i></td>
+				<td>{{item.name}}</td>
 				<td>{{item.user}}</td>
 				<td>{{item.server}}</td>
 				<td>{{types[item.type]}}</td>
-				<td>{{item.readTimeout}}</td>
-				<td>{{item.connectionTimeout}}</td>
 			</tr>
 		</tbody>
 	</table>
