Create user administration page.

--- a/armonitor-web/src/main/webapp/partials/admin/scm/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/scm/edit.html
@@ -137,11 +137,11 @@
 							<label class="control-label" for="cp"></label>
 							<div class="controls">
 								<button id="cp" class="btn btn-success" type="submit" ><i class="icon-floppy"></i>  Change password</button>
-								<span class="label label-danger" data-ng-show="error.validation"><i class="icon-attention"></i> The password are not same.</span>								
 							</div>												
 						</div>
 					</fieldset>
 				</form>			
-			</tab>			
+			</tab>
+		</tabset>
 	</div>
 </div>	
