--- a/armonitor-web/src/main/webapp/partials/admin/agent/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/agent/edit.html
@@ -1,4 +1,4 @@
-<h2>Bug tracking systems
+<h2>Agents
 	<small>configuration</small>
 </h2>
 
@@ -10,13 +10,13 @@
 		</a>
 	</li>
 	<li>
-		<i class="icon-bug"></i>
-		<a href="#/settings/bts">
-			BTS systems
+		<i class="icon-user-md"></i>
+		<a href="#/settings/agent">
+			Agents
 		</a>		
 	</li>	
 	<li class="active">
-		<i class="icon-bug"></i><span data-ng-hide="data.n"> {{data.server}}</span><span data-ng-show="data.n"> - - - - - - - - - -</span>
+		<i class="icon-user-md"></i><span data-ng-hide="data.n"> {{data.url}}</span><span data-ng-show="data.n"> - - - - - - - - - -</span>
 	</li>		
 </ol>
 
@@ -26,43 +26,35 @@
 		<tabset>
 			<tab>
 				<tab-heading>
-					<i class="icon-bug"></i> SCM system
-				</tab-heading>		
-
+					<i class="icon-user"></i> Agent
+				</tab-heading>				
 				<form class="form-horizontal" data-ng-submit="save()">
 					<fieldset>
 						<div class="control-group">
 							<label class="control-label" for="auth"></label>
 							<div class="controls">
 								<label class="enabled">
-									<input type="checkbox" id="auth" data-ng-model="data.auth"> Authentication
+									<input type="checkbox" id="auth" data-ng-model="data.authentication"> Agent authentication
 								</label>							
 							</div>
 						</div>
+												
 						<div class="control-group">
-							<label class="control-label" for="name">Name</label>
+							<label class="control-label" for="url">URL</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="name" type="text" class="form-control" placeholder="Name" data-ng-model="data.name" required>
+								<input id="url" type="text" class="form-control" placeholder="The agent URL" data-ng-model="data.url" required>
 							</div>
 						</div>
 						
 						<div class="control-group">
-							<label class="control-label" for="server">Server URL</label>
-							<div class="input-group">
-								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="server" type="text" class="form-control" placeholder="Server URL" data-ng-model="data.server" required>
-							</div>
-						</div>
-
-						<div class="control-group">
 							<label class="control-label" for="user">User</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="user" type="text" class="form-control" placeholder="User" data-ng-model="data.user" >
+								<input id="user" type="text" class="form-control" placeholder="The agent user" data-ng-model="data.user" required>
 							</div>
-						</div>				
-
+						</div>												
+						
 						<div class="control-group">
 							<label class="control-label" for="type">Type</label>
 							<div class="input-group">
@@ -71,16 +63,7 @@
 								</select>
 							</div>
 						</div>
-
-						<div class="control-group">
-							<label class="control-label" for="link">Issue link</label>
-							<div class="input-group">
-								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="link" type="text" class="form-control" placeholder="Read timeout" data-ng-model="data.link" >
-							</div>
-							<h6><span class="label label-info">${id}</span> issue id.</h6>
-						</div>
-
+						
 						<div class="control-group">
 							<label class="control-label" for="save"></label>
 							<div class="controls">
@@ -95,6 +78,7 @@
 					</fieldset>
 				</form>	
 			</tab>
+
 			<tab data-ng-show="!data.n">
 				<tab-heading>
 					<i class="icon-lock"></i> Password
@@ -122,11 +106,13 @@
 						<div class="control-group">
 							<label class="control-label" for="cp"></label>
 							<div class="controls">
-								<button id="cp" class="btn btn-success" type="submit" ><i class="icon-floppy"></i>  Change password</button>
+								<button id="cp" class="btn btn-success" type="submit" ><i class="icon-floppy"></i>  Reset password</button>
+								<button id="close" type="button" class="btn btn-default" data-ng-click="close()" ><i class="icon-floppy"></i> Close</button>
 							</div>												
 						</div>
 					</fieldset>
 				</form>			
-			</tab>			
+			</tab>		
+		</tabset>
 	</div>
 </div>	
