Create the system administration page.

--- a/armonitor-web/src/main/webapp/partials/admin/agent/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/agent/edit.html
@@ -40,6 +40,14 @@
 						</div>
 												
 						<div class="control-group">
+							<label class="control-label" for="name">Name</label>
+							<div class="input-group">
+								<span class="input-group-addon"><i class="icon-pencil"></i></span>
+								<input id="name" type="text" class="form-control" placeholder="Name of the agent" data-ng-model="data.name" required>
+							</div>
+						</div>
+						
+						<div class="control-group">
 							<label class="control-label" for="url">URL</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
@@ -51,7 +59,7 @@
 							<label class="control-label" for="user">User</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="user" type="text" class="form-control" placeholder="The agent user" data-ng-model="data.user" required>
+								<input id="user" type="text" class="form-control" placeholder="The agent user" data-ng-model="data.user" >
 							</div>
 						</div>												
 						
