--- a/armonitor-web/src/main/webapp/partials/admin/sys/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/sys/edit.html
@@ -11,7 +11,7 @@
 	</li>
 	<li>
 		<i class="icon-suitcase"></i>
-		<a href="#/settings/app">
+		<a href="#/settings/sys">
 			Systems
 		</a>		
 	</li>	
@@ -45,47 +45,53 @@
 								<input id="name" type="text" class="form-control" placeholder="Name" data-ng-model="data.name" required>
 							</div>
 						</div>
-
 						<div class="control-group">
-							<label class="control-label" for="tt">Type</label>
-							<div class="input-group">
-								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="tt" type="text" class="form-control" placeholder="Type of the application" data-ng-model="data.type">
-							</div>
-						</div>				
-
-						<div class="control-group">
-							<label class="control-label" for="scmTrunk">Source code trunk</label>
-							<div class="input-group">
-								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="scmTrunk" type="text" class="form-control" placeholder="Name" data-ng-model="data.scmTrunk">
+							<label class="control-label" for="timer"></label>
+							<div class="controls">
+								<label class="enabled">
+									<input type="checkbox" id="timer" data-ng-model="data.timer"> Timer
+								</label>							
 							</div>
 						</div>
-
 						<div class="control-group">
-							<label class="control-label" for="scmBranches">Source code branches</label>
-							<div class="input-group">
-								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="scmBranches" type="text" class="form-control" placeholder="Name" data-ng-model="data.scmBranches">
+							<label class="control-label" for="notification"></label>
+							<div class="controls">
+								<label class="enabled">
+									<input type="checkbox" id="notification" data-ng-model="data.notification"> Notification
+								</label>							
 							</div>
-						</div>
-
+						</div>						
 						<div class="control-group">
-							<label class="control-label" for="scmTags">Source code tags</label>
+							<label class="control-label" for="service">Service</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="scmTags" type="text" class="form-control" placeholder="Name" data-ng-model="data.scmTags">
+								<input id="service" type="text" class="form-control" placeholder="Name" data-ng-model="data.service" >
 							</div>
-						</div>
-
+						</div>						
+						
 						<div class="control-group">
-							<label class="control-label" for="repoLink">Repository link</label>
+							<label class="control-label" for="domain">Domain</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<input id="repoLink" type="text" class="form-control" placeholder="Name" data-ng-model="data.repoLink">
+								<input id="domain" type="text" class="form-control" placeholder="Name" data-ng-model="data.domain" >
+							</div>
+						</div>	
+						
+						<div class="control-group">
+							<label class="control-label" for="link">Link</label>
+							<div class="input-group">
+								<span class="input-group-addon"><i class="icon-pencil"></i></span>
+								<input id="link" type="text" class="form-control" placeholder="Name" data-ng-model="data.link" >
 							</div>
 						</div>
 						
+						<div class="control-group">
+							<label class="control-label" for="clazz">Classification</label>
+							<div class="input-group">
+								<span class="input-group-addon"><i class="icon-pencil"></i></span>
+								<input id="clazz" type="text" class="form-control" placeholder="Name" data-ng-model="data.clazz" >
+							</div>
+						</div>
 						
 						<div class="control-group">
 							<label class="control-label" for="save"></label>
@@ -101,19 +107,19 @@
 					</fieldset>
 				</form>	
 			</tab>
-			<tab data-ng-show="!data.n" select="load()" data-ng-controller="AppProjectAdminCtrl">
+			<tab data-ng-show="!data.n" select="load()" data-ng-controller="SystemAppAdminCtrl">
 				<tab-heading>
-					<i class="icon-award"></i> Project
+					<i class="icon-beaker"></i> Application
 				</tab-heading>
 				<form class="form-horizontal" data-ng-submit="add()" >		
 					<fieldset>
 
 						<div class="control-group">
-							<label class="control-label" for="item">Project</label>
+							<label class="control-label" for="item">Application</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
 								<select id="item" class="form-control" data-ng-model="item.selected" data-ng-options="k as v for (k,v) in list">									
-									<option value="">--- select a project ---</option>
+									<option value="">--- select a application ---</option>
 								</select>
 							</div>
 						</div>
@@ -128,19 +134,19 @@
 					</fieldset>
 				</form>			
 			</tab>			
-			<tab data-ng-show="!data.n" select="load()" data-ng-controller="AppScmAdminCtrl">
+			<tab data-ng-show="!data.n" select="load()" data-ng-controller="SystemAgentAdminCtrl">
 				<tab-heading>
-					<i class="icon-fork"></i> Source code system
+					<i class="icon-user-md"></i> Agent
 				</tab-heading>
-				<form class="form-horizontal" data-ng-submit="addscm()" >		
+				<form class="form-horizontal" data-ng-submit="add()" >		
 					<fieldset>
 
 						<div class="control-group">
-							<label class="control-label" for="btsc">Source code systems</label>
+							<label class="control-label" for="btsc">Agent</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
-								<select id="btsc" class="form-control" data-ng-model="bts.selected" data-ng-options="k as v for (k,v) in btslist">									
-									<option value="">--- select a source code system ---</option>
+								<select id="btsc" class="form-control" data-ng-model="item.selected" data-ng-options="k as v for (k,v) in list">									
+									<option value="">--- select an agent ---</option>
 								</select>
 							</div>
 						</div>
@@ -155,9 +161,9 @@
 					</fieldset>
 				</form>			
 			</tab>	
-			<tab data-ng-show="!data.n" select="load()" data-ng-controller="ProjectSysAdminCtrl">
+			<tab data-ng-show="!data.n" select="load()" data-ng-controller="SystemRoleAdminCtrl">
 				<tab-heading>
-					<i class="icon-suitcase"></i> Systems
+					<i class="icon-key"></i> Roles
 				</tab-heading>
 				<div style="padding-top: 10px"></div>
 				<div class="panel panel-default">
@@ -174,34 +180,23 @@
 						<thead>
 							<tr>
 								<th> </th>	
-								<th>Name</th>	
-								<th>Enabled</th>
-								<th>Service</th>
-								<th>Domain</th>
-								<th>Classification</th>
-								<th>Notification</th>
-								<th>Timer</th>
+								<th>Name</th>								
 							</tr>
 						</thead>			
 						<tbody>
-							<tr data-ng-repeat="item in all| filter:search">
+							<tr data-ng-repeat="(i, item) in all| filter:search">
 								<td>
-									<a href="#/settings/sys/edit/{{item.guid}}"><span class="icon-pencil"></span></a>
+									<a href="" data-ng-click="addRole(item)" data-ng-hide="item.remove"><span class="icon-check-empty"></span></a>
+									<a href="" data-ng-click="removeRole(item)" data-ng-show="item.remove"><span class="icon-check"></span></a>
 								</td>					
 								<td>{{item.name}}</td>
-								<td><i data-ng-class="{'icon-check': item.enabled, 'icon-check-empty': !item.enabled}"></i></td>
-								<td>{{item.service}}</td>
-								<td>{{item.domain}}</td>
-								<td>{{item.clazz}}</td>
-								<td><i data-ng-class="{'icon-check': item.enabled, 'icon-check-empty': !item.notification}"></i></td>
-								<td><i data-ng-class="{'icon-check': item.enabled, 'icon-check-empty': !item.timer}"></i></td>
 							</tr>
 						</tbody>
 					</table>					
 				</div>		
 
 				<div class="control-group">
-					<label class="control-label" for="cp"></label>
+					<label class="control-label" for="close"></label>
 					<div class="controls">
 						<button id="close" type="button" class="btn btn-default" data-ng-click="close()" ><i class="icon-floppy"></i> Close</button>
 					</div>												
