--- a/armonitor-web/src/main/webapp/partials/admin/app/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/app/edit.html
@@ -207,6 +207,34 @@
 					</div>												
 				</div>
 			</tab>
+			<tab data-ng-show="!data.n">
+				<tab-heading>
+					<i class="icon-key"></i> Key
+				</tab-heading>
+				<form class="form-horizontal" >		
+					<fieldset>
+
+						<div class="control-group">
+							<label class="control-label" for="key">Key</label>
+							<div class="input-group">
+								<span class="input-group-addon"><i class="icon-pencil"></i></span>
+								<input id="key" type="text" class="form-control" placeholder="Application key" data-ng-model="data.key" readonly="true">
+							</div>
+						</div>
+
+						<div class="control-group">
+							<label class="control-label" for="gkey"></label>
+							<div class="controls">
+								<button id="gkey" class="btn btn-success" type="button" data-ng-click="generateKey()"><i class="icon-floppy"></i>  Generate key</button>
+								<button id="close" type="button" class="btn btn-default" data-ng-click="close()" ><i class="icon-floppy"></i> Close</button>
+								<span style="float: right">
+									<button type="button" class="btn btn-danger" data-ng-disabled="data.n" data-ng-click="deleteKey()"><i class="icon-trash"></i> Remove key</button>
+								</span>									
+							</div>												
+						</div>
+					</fieldset>
+				</form>	
+			</tab>			
 		</tabset>
 	</div>
 </div>	
